# microslam

./: .gitignore  .mxproject  LICENCE  README.md  workspace.code-workspace
firmware/: .gitignore  CMakeLists.txt  README.md  host_tests.sh  sdkconfig  sdkconfig.defaults
firmware/components/led/: CMakeLists.txt  led.c
firmware/components/led/include/: led.h
firmware/components/lidar/: CMakeLists.txt
firmware/components/logging/: CMakeLists.txt  logging.c
firmware/components/logging/include/: logging.h
firmware/components/platform/: CMakeLists.txt  README.md  platform.c
firmware/components/platform/host_test/: CMakeLists.txt  sdkconfig.defaults
firmware/components/platform/host_test/main/: CMakeLists.txt  platform_test.c  string.h
firmware/components/platform/include/: platform.h
firmware/components/slam/: CMakeLists.txt  system.c
firmware/components/slam/include/: state.h  system.h
firmware/components/telemetry/: CMakeLists.txt  README.md  telemetry.c
firmware/components/telemetry/include/: telemetry.h
firmware/components/uart_interface/: uart_interface.c
firmware/components/uart_interface/include/: uart_interface.h
firmware/components/wifi/: CMakeLists.txt  wifi.c
firmware/components/wifi/include/: wifi.h
firmware/main/: CMakeLists.txt  main.c
firmware/mocks/uart_interface/: CMakeLists.txt
firmware/test_data/: GetLDSScan  README.md
libmicroslam/: Makefile  README.md
libmicroslam/include/microslam/: map.h  microslam.h  microslam_viewer.h  observation.h  occupancy_quadtree.h  particle_filter.h  scan_matching.h  types.h  utils.h
libmicroslam/src/: main.c  map.c  microslam.c  microslam_viewer.c  observation.c  occupancy_quadtree.c  particle_filter.c  scan.c  scan_matching.c  utils.c
libmicroslam/test/: test_main.c  test_map.c  test_map.h  test_occupancy_quadtree.c  test_occupancy_quadtree.h  test_particle_filter.h  test_scan_matching.c  test_utils.h
slam/: .gitignore  CMakeLists.txt  README.md  pixi.toml
slam/include/microslam/: map.h  scan.h  utils.h
slam/include/slam/: course_to_fine_scan_matching.h  ekf.h  logging.h  loop_closure.h  map.h  mat.h  microslam_viewer.h  occupancy_quadtree.h  odometry.h  scan.h  scan_matching.h  serialisation.h  system.h  types.h  utils.h  viewer.h  weighted_scan_matching.h
slam/src/: course_to_fine_scan_matching.c  default_logging.c  ekf.c  loop_closure.c  main.c  main_old.c  map.c  mat.c  microslam_viewer.c  occupancy_quadtree.c  odometry.c  scan.c  scan_matching.c  serialisation.c  system.c  utils.c  viewer.c  weighted_scan_matching.c
slam/test/: CMakeLists.txt  test_ekf.c  test_map.c  test_mat.c  test_occupancy_quadtree.c  test_scan_matching.c  test_serialisation.c  test_utils.c
slamf/: CMakeLists.txt  README.md
slamf/include/slam/: scan_matching.h  serialisation.h  types.h  utils.h  viewer.h
slamf/src/: main.c  scan.c  scan_matching.c  serialisation.c
slamf/test/: test_occupancy_quadtree.c  test_scan_matching.c  test_serialisation.c
vehicle/: .mxproject  vehicle Debug.launch  vehicle.ioc
vehicle/Core/Inc/: main.h  stm32g4xx_hal_conf.h
vehicle/Core/Inc/vehicle/: adc.h  pwm.h  vehicle.h
vehicle/Core/Src/: adc.c  gpio.c  main.c  pwm.cpp  tim.c
vehicle/Core/Src/vehicle/: adc.cpp  pwm.cpp  ultrasound.cpp  vehicle.cpp
vehicle/Debug/: makefile  objects.list  objects.mk  sources.mk  vehicle.list
vehicle/Debug/Core/Src/: main.d  main.su  subdir.mk  tim.su
vehicle/Debug/Core/Src/vehicle/: adc.d  pwm.d  subdir.mk  ultrasound.d  vehicle.d  vehicle.su
vehicle/Debug/Drivers/STM32G4xx_HAL_Driver/Src/: subdir.mk
viewer/: CMakeLists.txt  README.md
viewer/src/: main.c  net.c  net.h
